Learn how to add headers and use images in request and response
